--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://admin:O2tHgDfgC9VrGMjl@blog.hwxmgp7.mongodb.net
-SECRET=39bc5862-6780-4d93-a1ba-9f2b5679b194
+MONGODB_URI=mongodb+srv://admin:1sKKVrQujrEPlSy5@blog.hwxmgp7.mongodb.net
+SECRET=046b9c9f-9e75-4d2c-bcb1-0355e47ca93f
