--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.20.2",
+    "@bytemd/plugin-frontmatter": "^1.20.2",
+    "@bytemd/plugin-gemoji": "^1.20.2",
+    "@bytemd/plugin-gfm": "^1.20.2",
+    "@bytemd/plugin-highlight-ssr": "^1.20.2",
+    "@bytemd/plugin-mermaid": "^1.20.2",
+    "@bytemd/react": "^1.20.2",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -25,6 +32,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
+    "github-markdown-css": "^5.2.0",
     "moment": "^2.29.4",
     "mongodb": "^5.0.1",
     "next": "13.1.6",
