--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://admin:1sKKVrQujrEPlSy5@blog.hwxmgp7.mongodb.net
+MONGODB_URI=mongodb+srv://admin:t3DN5C7dxOMm2Ada@blog.hwxmgp7.mongodb.net
 SECRET=046b9c9f-9e75-4d2c-bcb1-0355e47ca93f
